# opensectional

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  BUILD-WINDOWS.md  CMakeLists.txt  README.md  macos-toolchain.cmake  mingw-w64-toolchain.cmake  nasrbrowse.ini  osect.ini  requirements.txt
cmake/: FindZLIB.cmake  macos-toolchain.cmake  mingw-w64-toolchain.cmake
lib/imgui/: context.cpp  context.hpp  scoped.cpp  scoped.hpp
lib/sdl/: bitflags.hpp  buffer.cpp  command_buffer.cpp  command_buffer.hpp  copy_pass.cpp  copy_pass.hpp  depth_buffer.cpp  depth_buffer.hpp  device.cpp  device.hpp  error.cpp  event.cpp  event.hpp  filesystem.cpp  filesystem.hpp  font.cpp  font.hpp  instance.cpp  instance.hpp  log.cpp  log.hpp  opaque_typedef.hpp  optional.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  surface.cpp  surface.hpp  text.cpp  text.hpp  text_engine.cpp  text_engine.hpp  texture.cpp  timer.cpp  timer.hpp  (+6 more)
lib/sqlite/: database.cpp  database.hpp  statement.cpp  statement.hpp
sdl/: buffer.hpp  command_buffer.cpp  command_buffer.hpp  copy_pass.cpp  copy_pass.hpp  depth_buffer.cpp  device.hpp  error.hpp  event.cpp  event.hpp  instance.cpp  instance.hpp  optional.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp  texture.hpp  timer.hpp  types.hpp
shaders/: CMakeLists.txt  default.hlsl  line.hlsl  textured.hlsl
sqlite/: database.cpp  database.hpp
src/: altitude_filter.hpp  chart_style.cpp  chart_style.hpp  chart_type.cpp  chart_type.hpp  color.cpp  color.hpp  data_source.cpp  data_source.hpp  ephemeral_cache.cpp  ephemeral_cache.hpp  ephemeral_data.cpp  ephemeral_data.hpp  ephemeral_database.cpp  ephemeral_database.hpp  ephemeral_source.cpp  ephemeral_source.hpp  feature_builder.cpp  feature_builder.hpp  feature_renderer.cpp  feature_renderer.hpp  feature_type.cpp  feature_type.hpp  flight_route.cpp  flight_route.hpp  geo_math.cpp  geo_math.hpp  geo_types.hpp  http_client.cpp  http_client.hpp  ini_config.cpp  ini_config.hpp  label_renderer.cpp  label_renderer.hpp  layer.cpp  layer.hpp  layer_map.cpp  layer_map.hpp  line_renderer.cpp  line_renderer.hpp  (+44 more)
tests/: CMakeLists.txt  test_altitude_filter.cpp  test_chart_membership.cpp  test_chart_style.cpp  test_data_source.cpp  test_ephemeral_cache.cpp  test_ephemeral_database.cpp  test_flight_route.cpp  test_geo_math.cpp  test_http_client.cpp  test_ini_config.cpp  test_lru_set.cpp  test_map_view.cpp  test_route_planner.cpp  test_tfr_refresher.cpp  test_tfr_source.cpp  test_user_database.cpp  test_xnotam_parser.cpp
tests/fixtures/: xnotam_detail_6_4045.xml
tools/: build-macos-deps.sh  build-macos-package.sh  build-mingw-deps.sh  build-mingw-package.sh  build_adiz.py  build_aixm.py  build_all.py  build_common.py  build_dof.py  build_macos_icon.sh  build_nasr.py  build_nasr_db.py  build_search.py  build_shp.py  build_tfr.py  build_windows_icon.sh  download_all.py  download_nasr_data.py  render_basemap.py  requirements.txt  test_nasr_queries.py
